# ros2_ws

./: Breast Cancer Scanning with robot.pptx  README.md  Spectrometer Holder.stl
install/: local_setup.sh  setup.sh
install/FMT/lib/pkgconfig/: fmt.pc
install/FMT/share/FMT/: package.sh
install/catch2/include/catch2/: .clang-format  catch.hpp  fakeit.hpp
install/catch2/share/catch2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/custom_hardware/share/custom_hardware/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh
install/fp/include/fp/: all.hpp  macros.hpp  monad.hpp  no_discard.hpp  result.hpp  validate.hpp
install/fp/share/fp/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/mecharm/share/mecharm/: package.sh
install/mecharm_communication/share/mecharm_communication/: package.sh
install/mycobot/include/mycobot/: command.hpp  (+5 more)
install/mycobot_controller/share/mycobot_controller/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/custom_hardware/: package.xml
src/motion_planning_python_api/: CMakeLists.txt
src/moveit2_scripts/: CMakeLists.txt
src/moveit2_scripts/launch/: test_trajectory.launch.py
src/moveit2_scripts/src/: cartesian_path.cpp  draw_x.cpp  test_trajectory.cpp  test_trajectory2.cpp  test_trajectory3.cpp
src/mycobot_280/mycobot_280/: slider_control.py
src/mycobot_ros2/: support.txt
src/mycobot_ros2/mycobot_description/: CMakeLists.txt
src/mycobot_ros2/mycobot_gazebo/: CMakeLists.txt
src/mycobot_ros2/mycobot_moveit_config/: package.xml
(+728 files in other folders)
